View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031549 | Open CASCADE | OCCT:DRAW | public | 2020-05-06 13:06 | 2021-10-18 11:26 |
Reporter | kgv | Assigned To | osa | ||
Priority | normal | Severity | feature | ||
Status | resolved | Resolution | open | ||
Target Version | 7.7.0 | ||||
Summary | 0031549: Draw Harness, ViewerTest - add interactive polygon definition mode to vselect command | ||||
Description | Currently vselect accepts polygon definition only via command arguments, and interactively only rectangular definition is available in 3D Viewer of Draw Harness. It is desired adding an option to vselect activating interactive polygonal selection. When activated, left mouse clicks in 3D Viewer will add new polygon point, right mouse click will remove last point and clicking on first point will close the polygon and perform selection. This should be done with help of standard polygonal selection mechanism in AIS_ViewController. | ||||
Steps To Reproduce | pload ALL vinit box b 10 10 10 vdisplay b vfit vselect -polygonal click left mouse button to add a new vertex click right mouse button to delete the last vertex click on the first vertex to finish selection click Escape to abort | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR31549 has been created by mkrylova. SHA-1: 9626fdad7eb965a0f3bceaf25bb12094315dd048 Detailed log of new commits: Author: mkrylova Date: Fri May 29 16:00:04 2020 +0300 0031549: Draw Harness, ViewerTest - add interactive polygon definition mode to vselect command Has been added an option to vselect that activate an interactive polygonal selection by addition 2 new AIS_MouseGestures to add and delete points in polygonal selection and Boolean variable in AIS_ViewController to disable polygonal selection mode, editing the functions UpdatePolySelection, SelectInViewer and UpdateMouseButtons for manipulation with new selection mode. |
|
Branch CR31549 has been updated forcibly by mkrylova. SHA-1: e43b94b24bdf5b67173904f842022639fa47e7ad |
|
Branch CR31549 has been updated forcibly by mkrylova. SHA-1: 3ff0bfbcbc35780e478e043544d4591e989bc9c5 |
|
- Git commit should start with full issue title (including number). Seems to be title has been lost at some commit edition step. - Polygonal selection should be available as one-time operation activated somehow (in menu, toolbar, via Draw Harness command). Start of operation should replace main left mouse button click gesture (without modifiers like ALT) with Polygonal selection mode. At the end of operation (clicking on first point closing polygon, clicking Escape to abort), default gestures should be restored. The logic should be similar to ZoomWindow action in MFC and Qt samples, with more complicated logic aborting/committing operation. Current patch replaces Rectangular selection with Polygonal selection on Left+ALT click, which should be reverted. |
|
Branch CR31549 has been updated forcibly by mkrylova. SHA-1: 163e58793e90b5bc6abf6d726623273549defe25 |
Date Modified | Username | Field | Change |
---|---|---|---|
2020-05-06 13:06 | kgv | New Issue | |
2020-05-06 13:06 | kgv | Assigned To | => kgv |
2020-05-06 13:06 | kgv | Assigned To | kgv => mkrylova |
2020-05-06 13:06 | kgv | Status | new => assigned |
2020-06-02 14:39 | git | Note Added: 0092445 | |
2020-06-02 14:44 | mkrylova | Assigned To | mkrylova => osa |
2020-06-02 14:44 | mkrylova | Status | assigned => resolved |
2020-06-02 14:44 | mkrylova | Steps to Reproduce Updated | |
2020-06-03 13:33 | git | Note Added: 0092460 | |
2020-06-03 13:43 | git | Note Added: 0092462 | |
2020-06-04 11:30 | kgv | Note Added: 0092477 | |
2020-06-04 11:30 | kgv | Assigned To | osa => mkrylova |
2020-06-04 11:30 | kgv | Status | resolved => assigned |
2020-06-04 11:31 | kgv | Note Edited: 0092477 | |
2020-06-16 15:15 | git | Note Added: 0092558 | |
2020-06-16 15:20 | mkrylova | Assigned To | mkrylova => osa |
2020-06-16 15:20 | mkrylova | Status | assigned => resolved |
2020-06-16 15:20 | mkrylova | Steps to Reproduce Updated | |
2020-09-21 17:42 | kgv | Target Version | 7.5.0 => 7.6.0 |
2021-10-18 11:26 | kgv | Target Version | 7.6.0 => 7.7.0 |