0031549: Draw Harness, ViewerTest - add interactive polygon definition mode to vselect command

Has been added an option to interactive polygonal selection by
- addition new option "-polygonal" to vselect command
- addition activation polygonal selection mode in ViewerTest_ViewerCommands
- addition new AIS_MouseGesture
- addition new function in AIS_ViewController to set new AIS_MouseGesture
- addition Boolean variable in ViewerTest_EventManager to enable/disable polygonal selection
- editing functions in ViewerTest_EventManager for manipulation with selection